Add trustmesh swager spec
